# baby_sitter_django_react

./: build.sh
back-end/: db.sqlite3  pyproject.toml
back-end/datastore/drivers/: __init__.py  applications.py  chats.py  comments.py  jobs.py  registrations.py  replys.py  reviews.py  sessions.py  votes.py  watches.py
back-end/datastore/migrations/: 0001_initial.py  0002_registration.py  0003_auto_20220517_1704.py  0006_chat_message.py  0007_remove_chat_parent_id.py  0008_auto_20220608_1716.py  0009_registration_age_registration_exp_years_and_more.py  0010_rename_full_name_registration_username_and_more.py  0011_registration_child_care_registration_school_help.py  0012_review.py  0013_review_rating.py  0014_comment_reply.py  0015_vote.py  0016_registration_education.py  0017_watch.py  0018_job_user_type.py  0019_alter_job_user_type.py  0020_rename_babysitter_id_application_from_id_and_more.py  0021_alter_job_time_a_alter_job_time_b.py  0022_alter_job_post_time.py
back-end/datastore/models/: __init__.py  applications.py  chats.py  comments.py  jobs.py  registrations.py  replys.py  reviews.py  sessions.py  votes.py  watches.py
back-end/iCare/: asgi.py  settings.py  urls.py  wsgi.py
back-end/public/: asset-manifest.json  index.html
back-end/public/static/css/: main.8e0eabcd.css  main.8e0eabcd.css.map
back-end/shared/: errors.py  keys.py  names.py  routes.py
back-end/views/: public.py
back-end/views/api/: __init__.py  apply.py  chat.py  comments.py  filter.py  jobs.py  log_in.py  log_out.py  register.py  replys.py  reviews.py  users.py  votes.py  watches.py
(+68 files in other folders)
