[tool.poetry]
name = "iCare"
version = "0.1.0"
description = "iCare is an application, a community and a place to find babysitters according to parents' priorities and also help to provide employment for nannies."
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
